[package]
name = "rzozowski"
version = "0.1.3"
authors = ["rockysnow7 <feyles@icloud.com>"]
edition = "2021"
description = "A regex crate using Brzozowski derivatives."
license = "GPL-3.0-only"
repository = "https://github.com/rockysnow7/rzozowski"
documentation = "https://docs.rs/rzozowski"
readme = "README.md"
keywords = ["regex", "brzozowski", "derivatives"]
categories = ["text-processing"]
rust-version = "1.80"

[lib]
name = "rzozowski"

[dependencies]
chumsky = "0.10.1"
logos = "0.15.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
regex = "1.11.1"

[[bench]]
name = "benchmark"
harness = false

[build-dependencies]
monk = "0.2.1"
